[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sounds/LoopingTrack use for main menu and settings.ogg" type="AudioStream" id=1]
[ext_resource path="res://Sounds/Menu_Selection_Click.wav" type="AudioStream" id=2]
[ext_resource path="res://Menu/Node2D.gd" type="Script" id=3]
[ext_resource path="res://ButtonsAndArt/background-small-size/sk4.png" type="Texture" id=4]
[ext_resource path="res://ButtonsAndArt/Buttons-small-size/RectangleSmokeGray (1).png" type="Texture" id=5]
[ext_resource path="res://ButtonsAndArt/Buttons-small-size/RectangleSmokeOrange (1).png" type="Texture" id=6]
[ext_resource path="res://ButtonsAndArt/text assets/start.png" type="Texture" id=7]
[ext_resource path="res://ButtonsAndArt/text assets/quit.png" type="Texture" id=8]
[ext_resource path="res://ButtonsAndArt/text assets/options.png" type="Texture" id=9]

[node name="KingNode" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = -12.275
anchor_top = -6.875
anchor_right = 13.375
anchor_bottom = 8.05
margin_left = -0.999969
margin_top = -6.99997
margin_right = 0.999939
margin_bottom = -2.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -343.0
margin_top = -292.0
margin_right = 350.0
margin_bottom = 288.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="VBoxContainer"]
position = Vector2( -27, -37 )
stream = ExtResource( 2 )

[node name="start" type="TextureButton" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.439216 )
margin_top = 26.0
margin_right = 693.0
margin_bottom = 199.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Start" type="Sprite" parent="VBoxContainer/start"]
modulate = Color( 1, 1, 1, 0.901961 )
position = Vector2( 341, 78 )
scale = Vector2( 0.939287, 0.978816 )
texture = ExtResource( 7 )

[node name="options" type="TextureButton" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.439216 )
margin_top = 203.0
margin_right = 693.0
margin_bottom = 376.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Options" type="Sprite" parent="VBoxContainer/options"]
modulate = Color( 1, 1, 1, 0.901961 )
position = Vector2( 340, 84 )
texture = ExtResource( 9 )

[node name="quit" type="TextureButton" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.439216 )
margin_top = 380.0
margin_right = 693.0
margin_bottom = 553.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Quit" type="Sprite" parent="VBoxContainer/quit"]
modulate = Color( 1, 1, 1, 0.901961 )
position = Vector2( 341, 74 )
scale = Vector2( 0.98063, 1.03756 )
texture = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -5.415

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
